added header section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/influencer-fav.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>influencer gears</title>
 </head>
 <body>
-    <h1>influencer gears</h1>
+    <header class="section-width">
+        <h2>influencer products</h2>
+        <nav class="header-nav">
+            <ul>
+
+                <li><a href="#">home</a> </li>
+                <li><a href="#"> products</a></li>
+                <li> <a href="#">signup</a> </li>
+                <li> <a href="#">login</a> </li>
+            
+            </ul>
+            <img src="./images/search.png" alt="">
+            <img src="./images/shopping-cart.png" alt="">
+        </nav>
+    </header>
+    <section class="header-banner section-width">
+        <div class="banner-text">
+            <h1>start your journey as influencer</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora nemo quam deleniti laboriosam, minima animi.</p>
+            <button>Prebook now</button>
+        </div>
+        <div class="banner-img">
+            <img src="./images/Circle design.svg" alt="">
+            <img src="./images/main-camera.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
