--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/influencer-fav.png" type="image/x-icon">
+
+<!-- !______________ font-awesome cdn  ______________! -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <link rel="stylesheet" href="style.css">
     <title>influencer gears</title>
 </head>
 <body>
+    <!-- !______________ header section ______________! -->
+
     <header class="section-width">
         <h2>influencer products</h2>
         <nav class="header-nav">
@@ -24,16 +31,33 @@
             <img src="./images/shopping-cart.png" alt="">
         </nav>
     </header>
+
+    <!-- !______________ header-banner section ______________! -->
     <section class="header-banner section-width">
         <div class="banner-text">
             <h1>start your journey as influencer</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora nemo quam deleniti laboriosam, minima animi.</p>
-            <button>Prebook now</button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora nemo quam deleniti laboriosam, minima animi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio quibusdam iure eveniet, officia nisi incidunt. </p>
+            <button class="primary-btn">Prebook now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="banner-img">
             <img src="./images/Circle design.svg" alt="">
             <img src="./images/main-camera.png" alt="">
         </div>
     </section>
+
+    <!-- !______________ header-banner section ______________! -->
+
+    <hr class="sponsor-o-u">
+    <section class="sponsor-section section-width">
+     
+        <img src="./images/logos/Alibaba.svg" alt="">
+        <img src="./images/logos/Amazon.svg" alt="">
+        <img src="./images/logos/Daraz.pk Logo.svg" alt="">
+        <img src="./images/logos/Ebay.svg" alt="">
+        <img src="./images/logos/Rakuten.svg" alt="">
+        <img src="./images/logos/Walmart.svg" alt="">
+        <img src="./images/logos/Target.svg" alt="">
+    </section>
+    <hr class="sponsor-o-u">
 </body>
 </html>
