make responsive for all devices

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- !______________ header section ______________! -->
 
     <header class="section-width">
+      <p class="bars"><i class="fa-solid fa-bars"></i></p>
       <h2>influencer products</h2>
       <nav class="header-nav">
         <ul>
@@ -205,33 +206,41 @@
             <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
         </div>
-       
       </div>
-      <span class="see-more">See More<i class="fa-solid fa-arrow-right"></i></span>
+      <span class="see-more"
+        >See More<i class="fa-solid fa-arrow-right"></i
+      ></span>
     </section>
     <!-- !______________ featured products section ______________! -->
 
     <section class="featured-product section-width">
-        <img src="./images/gear.png" alt="">
-        <div class="featured-right-div">
-            <h3>Featured products at one place</h3>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-            <button class="primary-btn">join now <i class="fa-solid fa-arrow-right"></i></button>
-        </div>
+      <img src="./images/gear.png" alt="" />
+      <div class="featured-right-div">
+        <h3>Featured products at one place</h3>
+        <p>
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </p>
+        <button class="primary-btn">
+          join now <i class="fa-solid fa-arrow-right"></i>
+        </button>
+      </div>
     </section>
     <!-- !______________ footer section ______________! -->
 
     <footer>
-        <h2>influencer products</h2>
-        <p>Copyright &copy;2023 influencer products <br> All rights reserved</p>
-        <div>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            
-
-        </div>
+      <h2>influencer products</h2>
+      <p>
+        Copyright &copy;2023 influencer products <br />
+        All rights reserved
+      </p>
+      <div>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+      </div>
     </footer>
   </body>
 </html>
